--- a/src/app/gifs/pages/home-page/home-page.component.html
+++ b/src/app/gifs/pages/home-page/home-page.component.html
@@ -2,9 +2,9 @@
   <div class="col-12">
     <gifs-search-box></gifs-search-box>
   </div>
-  <div class="col-12 pt2">
+  <div class="col-12 pt-2">
     <!-- Listado de Gifs -->
     <!-- card-list -->
-    <gifs-card-list></gifs-card-list>
+    <gifs-card-list [gifs]="gifs"></gifs-card-list>
   </div>
 </div>
